# my_data_eng

./: .gitignore  PROJECT_STRUCTURE.md  README.md  dde_itmo.ipynb  environment.yml  raw_data_EDA.ipynb  request.txt  requirements.txt  xxx.py
api_example/: README.md  api.ipynb  api_reader.py  environment.yml  requirements.txt
etl/: __init__.py  extract.py  load.py  main.py  transform.py  validate.py
my_data_eng/: pyproject.toml
notebooks/: EDA.ipynb  dde_itmo.ipynb
src/: data_loader.py  data_preprocessing.py  raw_data_EDA.py  write_to_db.py
